--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 #   $ todo --help 
 todo
 
+# Ditto.
+turf
+
 # Execute `_gh-add` to configure for private use. Checkout `--help` for details.
 #   $ _gh-add --help
 gh-add
